# MailBackend

./: .env  .env.example  .env.main  .gitignore  Dockerfile  README-config.md  alembic.ini  config.py  config.sample.ini  gunicorn_conf.py  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: deployVPS.yml  formatting.yml  install.yaml  pylint.yml  resetDatabase.yml
alembic/: env.py
alembic/versions/: 2024-04-11_02-08__907f9cb87f91.py  2024-05-07_00-30__386edb3fbafa.py  2024-05-07_00-31__1dc175d9dfdb.py  3ce5f378e8d1_28-09-2023_17-09.py  550878b33149_21-08-2023_20-18.py  6a212e0e0b92_17-11-2023_02-52.py  7c00e3578952_22-08-2023_00-49.py  871f7124284f_15-09-2023_16-44.py  a67851c0d7d4_28-09-2023_18-34.py  c5d57910d670_10-09-2023_20-12.py  e26348b569eb_12-10-2023_01-36.py
src/: imports.py
src/Clients/: UserClient.py
src/Mail/: model.py  schema.py  service.py
src/MailQueue/: mailQueue.py
src/Queue/: mailQueue.py  model.py  service.py
src/Template/: model.py  router.py  schema.py  service.py  validator.py
src/alembic/: env.py
src/alembic/versions/: 0bae1f81d197_02-11-2023_13-04.py  4b8ee8394bcb_11-09-2023_17-03.py  66f272fcd052_27-09-2023_17-02.py  6e8d8784987c_16-09-2023_00-51.py  6fa69e6756c5_10-09-2023_05-14.py  8d4c32422e7a_15-09-2023_14-46.py  91cc228b8be9_24-08-2023_03-47.py  bd9a70ee3cae_11-09-2023_05-00.py  bf4093e132a0_25-09-2023_13-03.py
src/configuration/: Configuration.py  Settings.py  config.yaml.sample
src/impl/Mail/: model.py  router.py  schema.py  service.py
src/impl/Queue/: mailQueue.py  model.py  schema.py  service.py
src/impl/Template/: model.py  router.py  schema.py  service.py  validator.py
src/impl/versions/: v1.py
src/services/: mail.py
src/utils/: CommonFields.py  database.py  service_utils.py
src/utils/Base/: BaseClient.py  BaseModel.py  (+1 more)
src/versions/: v1.py
(+9 files in other folders)
