[tool.poetry]
name = "lleidahackmailbackend"
version = "0.1.0"
description = ""
authors = ["tonlls"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openapi-python-client = "^0.20.0"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.30"
FastAPI-SQLAlchemy = "^0.2.1"
argparse = "^1.4.0"
httpx = "^0.27.0"
pyyaml = "^6.0.1"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
