[project]
name = "lleidahackmailbackend"
version = "0.1.0"
description = ""
authors = [
    {name = "tonlls"}
]
requires-python = ">=3.12"
dependencies = [
    "openapi-python-client>=0.20.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.1",
    "SQLAlchemy>=2.0.30",
    "FastAPI-SQLAlchemy>=0.2.1",
    "argparse>=1.4.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "gunicorn>=22.0.0",
    "fastapi-utils>=0.7.0",
    "typing-inspect>=0.9.0",
    "isort>=5.13.2",
    "uvicorn>=0.30.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
