[project]
name = "mailbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "argparse>=1.4.0",
    "fastapi>=0.117.1",
    "fastapi-sqlalchemy>=0.2.1",
    "gunicorn>=23.0.0",
    "openapi-python-client>=0.26.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.43",
]
